# rakib

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  publish.yml
policies/: data.json  rakib.rego
src/rakib/: __init__.py  executor.py  policy.py  provenance.py
tests/: test_executor.py
