[project]
name = "rakib"
version = "0.1.1"
description = "Data flow security for AI agents — provenance tracking and policy enforcement"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
opa = ["httpx>=0.28"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rakib"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
